--- a/front/src/App.css
+++ b/front/src/App.css
@@ -11,7 +11,7 @@
   background: rgba(0,0,0,0);
   color : white;
   font-size : 40px;
-  border : 3px solid white;
+  border : 3px solid black;
   border-radius: 40px;
   padding-left : 20px;
   padding-right : 20px;
