--- a/front/src/MainPage.css
+++ b/front/src/MainPage.css
@@ -1,32 +1,65 @@
-.Prompt_container{
+@font-face {
+    font-family: 'LOTTERIACHAB';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/LOTTERIACHAB.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+.Top_container{
     display : flex;
-    width : 80%;
+    width : 50%;
     height : 20%;
     position : absolute;
-    background-color : aqua;
-    top : 10%;
-    left : 10%;
+    background-color : white;
+    top : 0;
+    left : 25%;
+    border-bottom-left-radius : 20px;
+    border-bottom-right-radius : 20px;
+    justify-content: start;
+    align-items: center;
+    overflow : hidden;
+}
+.Prompt_container{
+    display : flex;
+    flex-direction: row;
+    position : absolute;
+    bottom : 10%;
+    height : 60%;
+    left : 5%;
 }
 .Prompt{
+    width : 9%;
+    aspect-ratio: 1/1;
     position : relative;
     background-color : white;
+    margin-right : 20px;
+    display : flex;
+    justify-content: center;
+    align-items: center;
+}
+.Prompt_img{
+    position : relative;
+    width : 80%;
 }
 .Page{
     width : 100vw;
     height :100vh;
-    background-color : yellow;
+    background : radial-gradient(#FFDD95,#FFA500);
+    /* background-color : #FFA500 */
 }
 .Round{
     text-align: center;
 }
 .Ingredient{
-    width : 7vw;
-    height : 7vw;
+    width : 6vw;
+    height : 6vw;
     border : none;
     background-color : white;
     border-radius: 100%;
     transition : 0.1s ease-in;
     padding : 10px;
+    display : flex;
+    justify-content: center;
+    align-items: center;
 }
 .Ingredient:hover{
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
@@ -37,13 +70,50 @@
     width : 100%;
     height: auto;
 }
+.Retry{
+    display : block;
+    width : 80%;
+    height: auto;
+}
 .Ingredient_container{
     position : absolute;
-    width : 80%;
+    width : 60%;
     display : flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    bottom : 10%;
-    right : 10%;
+    bottom : 5%;
+    right : 20%;
+}
+.Timer_container{
+    width : 90%;
+    height : 10%;
+    border-radius : 10px;
+    position : absolute;
+    top : 10%;
+    left : 5%;
+    background-color: #F2EEEC;
+}
+.Score{
+    font-family : 'LOTTERIACHAB', sans-serif;
+    color : white;
+    font-size : calc(15px + 2vmin);
+
+}
+.Score_num{
+    font-family : 'LOTTERIACHAB', sans-serif;
+    color : white;
+    font-size : calc(20px + 5vmin);
+
+}
+.Score_container{
+    width : 10%;
+    height : 13%;
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position : absolute;
+    top : 4%;
+    right : 4%;
 }
