--- a/front/src/Burger.css
+++ b/front/src/Burger.css
@@ -3,7 +3,7 @@
   background: rgba(0,0,0,0);
   color : white;
   font-size : 40px;
-  border : 3px solid black;
+  border : 3px solid white;
   border-radius: 40px;
   padding-left : 20px;
   padding-right : 20px;
