--- a/front/src/MainPage.css
+++ b/front/src/MainPage.css
@@ -31,20 +31,20 @@
     aspect-ratio: 1/1;
     position : relative;
     background-color : white;
-    margin-right : 20px;
+    margin-right : 30px;
     display : flex;
     justify-content: center;
     align-items: center;
 }
 .Prompt_img{
     position : relative;
-    width : 80%;
+    width : 100%;
 }
 .Page{
     width : 100vw;
     height :100vh;
-    background : radial-gradient(#FFDD95,#FFA500);
-    /* background-color : #FFA500 */
+    /* background : radial-gradient(#FFDD95,#FFA500); */
+    background-color : #fafafa;
 }
 .Round{
     text-align: center;
@@ -96,18 +96,21 @@
 }
 .Score{
     font-family : 'LOTTERIACHAB', sans-serif;
-    color : white;
-    font-size : calc(15px + 2vmin);
-
+    color : #FFA500;
+    /* font-size : calc(15px + 2vmin); */
+    font-size : 25px;
+    line-height: 1;
 }
 .Score_num{
     font-family : 'LOTTERIACHAB', sans-serif;
-    color : white;
-    font-size : calc(20px + 5vmin);
-
+    color : #FFA500;
+    /* font-size : calc(20px + 5vmin); */
+    font-size : 60px;
+    line-height: 1;
+    margin-top : 20px;
 }
 .Score_container{
-    width : 10%;
+    width : 25%;
     height : 13%;
     display : flex;
     flex-direction: column;
@@ -115,5 +118,31 @@
     align-items: center;
     position : absolute;
     top : 4%;
-    right : 4%;
+    right : 0%;
+
+}
+.Logo_container{
+    width : 25%;
+    height : 13%;
+    display : flex;
+    position : absolute;
+    left : 0;
+    top : 4%;
+    align-items: center;
+    justify-content: center; 
+    flex-direction: column;   
+}
+.Donald{
+    height : 25px;
+}
+.Donald_text{
+    font-family : 'LOTTERIACHAB', sans-serif;
+    color : #FFA500;
+    /* font-size : calc(15px + 2vmin); */
+    font-size : 25px;
+    line-height: 1;
+}
+.Mad{
+    height : 55px;
+    margin-top : 20px;
 }
