--- a/front/src/MainPage.css
+++ b/front/src/MainPage.css
@@ -22,6 +22,7 @@
     display : flex;
     flex-direction: row;
     position : absolute;
+    justify-content: center;
     bottom : 10%;
     height : 60%;
     left : 5%;
