--- a/front/src/MainPage.css
+++ b/front/src/MainPage.css
@@ -44,7 +44,6 @@
 .Page{
     width : 100vw;
     height :100vh;
-    /* background : radial-gradient(#FFDD95,#FFA500); */
     background-color : #fafafa;
 }
 .Round{
@@ -65,6 +64,7 @@
 .Ingredient:hover{
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
     transform: scale(1.2, 1.2);
+    cursor : pointer;
 }
 .Ingredient_button{
     display : block;
