--- a/front/src/ResultPage.css
+++ b/front/src/ResultPage.css
@@ -1,19 +1,95 @@
-.Page{
+.ResultPage{
     width : 100vw;
     height : 100vh;
-    background-color : #fafafa;
+    background-color : #FAFAFA;
+    display : flex;
+    flex-direction: row;
+}
+.My_result_container{
+    width : 35%;
+    height: 100%;
+    background-color: aqua;
+    display : flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.Degree{
+    font-family : 'LOTTERIACHAB', sans-serif;
+    font-size : 30px;
+}
+.My_result{
+
+}
+.Re_button{
+    width : 50%;
+    height : 10%;
+    background-color: #FFA500;
+    border : none;
+    color : white;
+    font-family : 'LOTTERIACHAB', sans-serif;
+    font-size : 30px;
+    border-radius : 100px;
+}
+.Others{
+    width : 65%;
+    height : 100%;
+    display : flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.Rank{
+    height : 65%;
+    width : 75%;
     display : flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.Re_button{
-    width : 50%;
-    height : 15%;
-    background-color: #FFA500;
-    border : none;
-    color : #FAFAFA;
+.Rank_title{
     font-family : 'LOTTERIACHAB', sans-serif;
     font-size : 40px;
-    border-radius : 30px;
+    color : #FFA500;
+    margin-bottom : 15px;
+}
+.Rank_container{
+    height : 90%;
+    width : 100%;
+    background-color : white;
+    display : flex;
+    flex-direction: column;
+    border-top : 3px solid rgba(255,156,0,0.6);
+    border-bottom : 3px solid rgba(255,156,0,0.6);
+}
+.Result{
+    height : 10%;
+}
+.Logo_container{
+    width : 25%;
+    height : 13%;
+    display : flex;
+    position : absolute;
+    left : 0;
+    top : 4%;
+    align-items: center;
+    justify-content: center; 
+    flex-direction: column;   
+}
+.Donald{
+    height : 25px;
+}
+.Donald_text{
+    font-family : 'LOTTERIACHAB', sans-serif;
+    color : #FFA500;
+    /* font-size : calc(15px + 2vmin); */
+    font-size : 25px;
+    line-height: 1;
+}
+.Mad{
+    height : 55px;
+    margin-top : 20px;
+}
+.Mad:hover{
+    cursor : pointer;
 }
