--- a/front/src/Burger.css
+++ b/front/src/Burger.css
@@ -1,16 +1,64 @@
-
 .Start{
   background: rgba(0,0,0,0);
-  color : white;
+  color : #FFA500;
   font-size : 40px;
-  border : 3px solid white;
-  border-radius: 40px;
+  font-family : 'LOTTERIACHAB', sans-serif;
+  border : none;
+  border-bottom : 5px solid #FFA500;
   padding-left : 20px;
   padding-right : 20px;
 }
-.Button_container{
+.Bottom_container{
   position : absolute;
+  bottom : 5%;
+  width : 100%;
+  height : 8%;
+  display : flex;
+  justify-content: center;
+  align-items: center;
 }
 .Burger_page{
-  background : radial-gradient(#FFDD95,#FFA500);
+  background-color : #FAFAFA;
+  z-index : -1;
+}
+.Burger_Logo_container{
+  position : absolute;
+  width : 100%;
+  height : 80%;
+  top : 0;
+  right : 0;
+  overflow : hidden;
+  z-index : 0;
+  display : flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.Burger_mad{
+  height : 50%;
+}
+.Burger_donald{
+  height : 30%;
+}
+.Burger{
+  position : absolute;
+  z-index : 1;
+}
+.getUserNickname{
+  background: rgba(0,0,0,0);
+  color : #FFA500;
+  font-size : 40px;
+  font-family : 'LOTTERIACHAB', sans-serif;
+  border : none;
+  border-bottom : 5px solid #FFA500;
+  padding-left : 20px;
+  padding-right : 20px;
+  outline : none;
+  text-align: center; 
+}
+.getUserNickname::placeholder{
+  color : #FFA500;
+  font-size : 40px;
+  font-family : 'LOTTERIACHAB', sans-serif;
+  opacity : 0.5;
 }
