--- a/front/src/Burger.css
+++ b/front/src/Burger.css
@@ -20,25 +20,29 @@
 .Burger_page{
   background-color : #FAFAFA;
   z-index : -1;
-}
-.Burger_Logo_container{
-  position : absolute;
-  width : 100%;
-  height : 80%;
-  top : 0;
-  right : 0;
-  overflow : hidden;
-  z-index : 0;
-  display : flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  overflow: hidden;
+  width : 100vw;
+  height : 100vh;
 }
 .Burger_mad{
-  height : 50%;
+  height : 40%;
+  width : 60%;
+  position : absolute;
+  top : 5%;
+  z-index : 0;
+  right : 20%;
+  object-fit : contain;
+  overflow: hidden;
 }
 .Burger_donald{
-  height : 30%;
+  height : 25%;
+  width : 80%;
+  right : 10%;
+  position : absolute;
+  top : 50%;
+  z-index : 0;
+  object-fit : contain;
+  overflow: hidden;
 }
 .Burger{
   position : absolute;
