--- a/front/src/MainPage.css
+++ b/front/src/MainPage.css
@@ -6,12 +6,12 @@
 }
 .Top_container{
     display : flex;
-    width : 50%;
+    width : 60%;
     height : 20%;
     position : absolute;
     background-color : white;
     top : 0;
-    left : 25%;
+    left : 20%;
     border-bottom-left-radius : 20px;
     border-bottom-right-radius : 20px;
     justify-content: start;
@@ -25,14 +25,15 @@
     justify-content: center;
     bottom : 10%;
     height : 60%;
-    left : 5%;
+    width : 100%;
 }
 .Prompt{
-    width : 9%;
+    width : 8%;
     aspect-ratio: 1/1;
     position : relative;
     background-color : white;
-    margin-right : 30px;
+    margin-right : 15px;
+    margin-left : 15px;
     display : flex;
     justify-content: center;
     align-items: center;
@@ -111,7 +112,7 @@
     margin-top : 20px;
 }
 .Score_container{
-    width : 25%;
+    width : 20%;
     height : 13%;
     display : flex;
     flex-direction: column;
@@ -122,7 +123,7 @@
     right : 0%;
 }
 .Logo_container{
-    width : 25%;
+    width : 20%;
     height : 13%;
     display : flex;
     position : absolute;
