--- a/front/src/ResultPage.css
+++ b/front/src/ResultPage.css
@@ -14,12 +14,55 @@
     justify-content: space-evenly;
     align-items: center;
 }
-.Degree{
-    font-family : 'LOTTERIACHAB', sans-serif;
-    font-size : 30px;
+.Empty{
+    height : 5%;
+    width : 100%;
 }
 .My_result{
-
+    width : 100%;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+.Degree{
+    font-family : 'LOTTERIACHAB', sans-serif;
+    font-size : calc(10px + 2.5vmin);
+    position : absolute;
+    width : 100%;
+    top : 10%;
+    text-align: center;
+}
+.My_score{
+    width : 100%;
+    text-align: center;
+    position : absolute;
+    top : 37%;
+    font-family : 'LOTTERIACHAB', sans-serif;
+    font-size : calc(20px + 4vmin);
+}
+.Result_background{
+    width : 75%;
+}
+.Degree_hat{
+    position : absolute;
+}
+.Degree_symbol{
+    position : absolute;
+    height : 25%;
+    bottom: 7%;
+}
+.Degree_symbol_right{
+    position : absolute;
+    top : 65%;
+    height : 30%;
+    right : 20%;
+}
+.Degree_symbol_left{
+    position : absolute;
+    top : 65%;
+    height : 30%;
+    left : 20%;
 }
 .Re_button{
     width : 50%;
@@ -68,11 +111,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-left : 20px;
-    margin-right : 20px;
+    margin-right : 10px;
 }
 .Rank_Num{
-    width : 10%;
+    width : 5%;
+    text-align : center;
     font-family : 'LOTTERIACHAB', sans-serif;
 }
 .Rank_Nickname{
@@ -83,12 +126,14 @@
 }
 .Rank_Date{
     font-family : 'LOTTERIACHAB', sans-serif;
-    width : 20%;
+    width : 10%;
     font-size : 10px;
     color : #C8C8C8;
 }
 .Rank_Score{
+    width : 20%;
     font-family : 'LOTTERIACHAB', sans-serif;
+    text-align : end;
 }
 .Logo_container{
     width : 20%;
