--- a/front/src/Burger.css
+++ b/front/src/Burger.css
@@ -7,6 +7,7 @@
   border-bottom : 5px solid #FFA500;
   padding-left : 20px;
   padding-right : 20px;
+  cursor : pointer;
 }
 .Bottom_container{
   position : absolute;
