--- a/front/src/LoadingPage.css
+++ b/front/src/LoadingPage.css
@@ -51,14 +51,29 @@
 .Onboarding_img{
     height : 100%;
     width : 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 .Onboarding_description{
-    height : 100%;
+    position : absolute;
+    z-index: 11;
+    top : 100%;
+    width : 100%;
+    height : 80%;
+    opacity: 0;
+    color : #FFA500;
+    font-size : 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height : 160%;
 }
 .swiper{
     font-family : 'LOTTERIACHAB', sans-serif;
     position : relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .swiper-pagination-bullet{
     background : #FFA500 !important;
@@ -95,4 +110,9 @@
 .swiper-button-next::after,
 .swiper-button-prev::after{
     display : none;
+}
+.swiper-slide.swiper-slide-active .Onboarding_description{
+    opacity : 1 ;
+    transition : 0.6s;
+    top : 2.5%;
 }
