feat : loadingpage 추가

--- a/front/src/LoadingPage.css
+++ b/front/src/LoadingPage.css
@@ -68,6 +68,12 @@
     text-align: center;
     line-height : 160%;
 }
+.Onboarding_hamburger{
+    position : absolute;
+    width : 15%;
+    top : 60%;
+    right : 30%;
+}
 .swiper{
     font-family : 'LOTTERIACHAB', sans-serif;
     position : relative;
